[gd_scene load_steps=7 format=2]

[ext_resource path="res://Pickup/BulletChange.gd" type="Script" id=1]
[ext_resource path="res://Assets/Pickups/Pickup.png" type="Texture" id=2]
[ext_resource path="res://Assets/misc/fonts/Prozen-Regular.otf" type="DynamicFontData" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.89941, 10 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 18
extra_spacing_top = 4
font_data = ExtResource( 3 )

[node name="BulletChange" type="Node2D"]
scale = Vector2( 6, 6 )
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.0427797, 0 )
scale = Vector2( 0.903743, 1.01375 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Sprite"]
frames = SubResource( 2 )

[node name="TextureRect" type="RichTextLabel" parent="Sprite"]
margin_left = -2.5
margin_top = -3.5
margin_right = 12.5
margin_bottom = 21.5
rect_scale = Vector2( 0.351853, 0.266367 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "F"
scroll_active = false

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 1.37663, 1.23436 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
